update pyment sustem in dummy payment
